--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,5 @@
 html, body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Noto Sans JP', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -12,4 +11,8 @@ a {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+.text-muted {
+  color: var(--color-muted) !important;
 }
