--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -26,6 +26,7 @@ $distinct-11: 26px;
 $distinct-12: 30px;
 $distinct-13: 34px;
 $distinct-14: 40px;
+$distinct-15: 50px;
 
 $padding-1: 12px;
 $padding-2: 16px;
@@ -41,6 +42,8 @@ $text-2: 14px;
 $text-3: 16px;
 $text-4: 18px;
 $text-5: 20px;
+
+$blog-title: 3.2rem;
 
 $nav-active-dot-size: 6px;
 
