--- a/components/ArticleCard/index.module.scss
+++ b/components/ArticleCard/index.module.scss
@@ -2,15 +2,19 @@
 @import '@styles/vars';
 
 .container {
-  display: grid;
-  grid-template-columns: 20% 1fr;
+  display: flex;
+  // grid-template-columns: 240px 1fr;
 
   .left {
+    width: 240px;
     .img {
       @include img-container();
       width: 100%;
       height: 100%;
       border-radius: $card-border-radius;
+      background-size: 100% auto;
+      background-position: center center;
+      background-repeat: no-repeat;
     }
   }
 
@@ -22,6 +26,20 @@
       font-size: $text-1;
       font-weight: bold;
       color: var(--color-primary);
+
+      .item {
+        margin-right: $distinct-2;
+
+        &::after {
+          content: "";
+          margin-left: $distinct-2;
+          display: inline-block;
+          width: 3px;
+          height: 3px;
+          background-color: var(--color-muted);
+          border-radius: 50%;
+        }
+      }
     }
 
     .title {
@@ -33,6 +51,8 @@
     }
 
     .footer {
+      display: flex;
+      align-items: center;
       font-size: $text-1;
       color: var(--color-muted);
     }
