--- a/components/Header/index.module.scss
+++ b/components/Header/index.module.scss
@@ -14,6 +14,13 @@
     align-items: center;
     justify-content: space-between;
 
+    .avatar {
+      @include img-container();
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+    }
+
     .logo {
       width: 200px;
       // @include square(100px);
