--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,9 @@
+@import '@styles/vars.scss';
+
 html, body {
+  font-size: $text-2;
+  color: var(--default-font-color);
+
   font-family: 'Noto Sans JP', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
