--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,11 +1,13 @@
 :root { 
   --color-primary-start: #5869DA80;
   --color-primary-end: #5869DA00;
+  // --color-primary-end: #2b42d9;
+  
   --color-bg: #f1f2f3;
   --color-mode: "light";
   --color-muted: #687385;
   --color-primary: #5869DA;
-  --color-secondary: #2d3d8b;
+  --color-secondary: #3b415d;
   --color-success: #09815C;
   --color-danger: #e3363e;
   --color-warning: #e38836;
