--- a/src/components/Button/index.module.scss
+++ b/src/components/Button/index.module.scss
@@ -6,7 +6,41 @@
   font-weight: 700;
   transition: all 0.2s ease-in-out;
   cursor: pointer;
+
+  &-primary {
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    border: 1px solid var(--color-primary);
+
+    &:hover {
+      background-color: var(--color-secondary);
+      border: 1px solid var(--color-secondary);
+    }
+  }
+
   &-default {
+    background-color: var(--color-white);
+    color: var(--color-primary);
+    border: 1px solid var(--color-primary);
+
+    &:hover {
+      border: 1px solid var(--color-primary-end);
+      color: var(--color-primary-end);
+    }
+  }
+
+  &-default {
+    background-color: var(--color-white);
+    color: var(--color-primary);
+    border: 1px solid var(--color-primary);
+
+    &:hover {
+      border: 1px solid var(--color-primary-end);
+      color: var(--color-primary-end);
+    }
+  }
+
+  &-primary {
     background-color: var(--color-primary);
     color: var(--color-white);
 
